[package]
name = "bevy_tower_defense"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.0" }
bevy-inspector-egui = "0.13.0"
bevy-scene-hook = "4.1.0"
bevy_mod_picking = "0.9.0"
bevy_rapier3d = { version =  "0.18.0", features = [ "simd-stable", "debug-render" ] }
leafwing-input-manager = "0.6.1"
